[package]
name = "grok"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
rand = "0.9.1"
reqwest = { version= "0.12.22", features = ["json","stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
